Added permanent email address with copyright

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,7 @@
 # Makefile for prctl
 # Copyright (c) 2000 Hewlett Packard Co
 # Copyright (c) 2000 Khalid Aziz <khalid_aziz@hp.com
+# Copyright (c) 2014 Khalid Aziz <khalid@gonehiking.org
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License Version 2 as 
